--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
     body {
       font-family: system-ui, sans-serif;
       font-size: 1.2rem;
+      background-color: #fcf4e8;
+      color: #333;
     }
     .container {
       max-width: 80ch;
